Fixed the alignment of the product name and price + added learn more + add to cart buttons

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,11 @@ footer {
     bottom: 0;
 }
 
+.product-info {
+    display: flex;
+    justify-content: space-between;
+}
+
 .product-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -93,7 +98,9 @@ footer {
 }
 
 .product {
+    width: 250px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
 }
@@ -105,12 +112,22 @@ footer {
     object-fit: cover;
 }
 
-.product-name,
-.product-price {
-    display: inline;
+.product-name {
+    display: block;
+    text-align: right;
+    white-space: nowrap;
+    margin-right: 45px;
     font-family: "Segoe UI";
     color: rgb(33, 31, 31);
-    margin: 0
+    border-bottom: 2px solid black;
+}
+
+.product-price {
+    display: block;
+    text-align: left;
+    margin-left: 45px;
+    font-family: "Segoe UI";
+    color: rgb(33, 31, 31);
 }
 
 .product-description {
@@ -123,3 +140,33 @@ footer {
     margin: 0
 }
 
+.learn-more-btn {
+    color: #BF7631;
+    background-color: transparent;
+    padding: 0;
+    border: none;
+    outline: none;
+    margin-top: 10px;
+    margin-right: 25px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.add-to-cart-btn {
+    background-color: #BF7631;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-top: 10px;
+    margin-left: 40px;
+    cursor: pointer;
+}
+
+.learn-more-btn:hover {
+    background-color: #cfcccc;
+}
+
+.add-to-cart-btn:active {
+    background-color: #cfcccc;
+}
+  
